--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
     </div>
 
     <div class="scoreBoard">
-        <div class="options">
-            <div id="playerChoice">?</div>
-            <div id="computerChoice">?</div>
+        <div class="player">
+            <div class="choice" id="playerChoice">?</div>
+            <div class="labels" id="playerLabel">Player</div>
+            <div class="score" id="playerScore">0</div>
         </div>
-        <div class="label"></div>
-            <div id="playerLabel">user</div>
-            <div id="computerLabel">computer</div>
-        </div>
-        <div class="score">
-            <div id="playerScore">0</div>
-            <div id="computerScore">0</div>
+
+        <div class="computer">
+            <div class="choice" id="computerChoice">?</div>
+            <div class="labels" id="computerLabel">Computer</div>
+            <div class="score" id="computerScore">0</div>
         </div>
     </div>
 
-    <div class="choices">
+    <div class="options">
         <button id="rock">&#9994</button>
         <button id="paper">&#9995</button>
         <button id="scissors">&#9996</button>
     </div>
 
+    <footer>
+        Copyright &copy; 2023 dani-cas
+    </footer>
 </body>
 </html>
