--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <!--<script src="javascript.js" defer></script>-->
+    <script src="javascript.js" defer></script>
     <title>Rock Paper Scissor</title>
 </head>
 <body>
@@ -20,26 +20,34 @@
 
     <div class="scoreBoard">
         <div class="player">
-            <div class="choice" id="playerChoice">?</div>
+            <div class="choice" id="playerSelection">?</div>
             <div class="labels" id="playerLabel">Player</div>
             <div class="score" id="playerScore">0</div>
         </div>
 
         <div class="computer">
-            <div class="choice" id="computerChoice">?</div>
+            <div class="choice" id="computerSelection">?</div>
             <div class="labels" id="computerLabel">Computer</div>
             <div class="score" id="computerScore">0</div>
         </div>
     </div>
-
     <div class="options">
-        <button id="rock">&#9994</button>
-        <button id="paper">&#9995</button>
-        <button id="scissors">&#9996</button>
+        <button id="rock" onclick="showComputerSelection('rock')">&#9994</button>
+        <button id="paper" onclick="showComputerSelection('rock')">&#9995</button>
+        <button id="scissors" onclick="showComputerSelection('rock')">&#9996</button>
     </div>
 
     <footer>
         Copyright &copy; 2023 dani-cas
     </footer>
+    
+    <div class= "modal" id= "modal">
+        <p class= "finalWinner">Final Winner</p>
+        <button class= "playAgain">Play again</button>
+    </div>
+     
+    <div id= "overlay"></div>
 </body>
 </html>
+
+Play Again button 
